##Text encoding: utf-8
2009-12-26  Jordan Mantha  <jordan.mantha@gmail.com>
	* programs/table/gchemtable-app.cc: added new charts submenu to view menu
	and move File->New Chart to new submenu as "Custom".
	* programs/table/gchemtable-app.h: ditto

2009-12-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/bond.h: fixed documentation typo.
	* libs/gcu/object.cc: do not access a NULL pointer when destroying objects.
	* plugins/paint/atoms/elementtool.cc: always update bond after an atom
	change.
	* programs/table/gchemtable-curve.cc: display element name as a tooltip
	when the mouse cursor rests over a data point.

2009-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: correctly save and load attached hydrogens position.
	* libs/gcp/fragment.cc: fixed main atom sniffing when deleting text.
	* mozilla-plugin/moz-plugin.c (ChemNew): some work on stream support.

2009-12-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: alwas set the correct color for the charge.
	* libs/gcp/document.cc: allow setting references to unknown objects while
	loading.
	* libs/gcp/mechanism-arrow.cc: ditto.
	* libs/gcp/reaction-step.cc: do not take mechanism arrow into account
	while spacing children.
	* libs/gcp/text.cc: fixed vertical alignment.
	* libs/gcu/Makefile.am: add new files.
	* libs/gcu/crystaldoc.cc: make compatible with new parent API.
	* libs/gcu/crystaldoc.h: ditto.
	* libs/gcu/document.cc: allow setting references to unknown objects while
	loading.
	* libs/gcu/document.h: ditto.
	* libs/gcu/loader-error.cc: new LoaderError exception class.
	* libs/gcu/loader-error.h: ditto.
	* plugins/paint/arrows/curvedarrowtool.cc: correctly add arrows inside
	reaction steps.
	* programs/table/gchemtable-curve.cc: start working on a tooltip API.
	* programs/table/gchemtable-curve.h: ditto.

2009-12-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: correctly add atoms inside fragments.
