@@ -20,14 +20,16 @@ IMAGES = \
 	charge+24.png \
 	electronpair24.png \
 	element24.png \
-	unpairedelectron24.png
+	unpairedelectron24.png \
+	orbit24.png
 
 VARIABLES = \
 	gcp_chargem_24			$(srcdir)/charge-24.png \
 	gcp_chargep_24			$(srcdir)/charge+24.png \
 	gcp_elecpair_24			$(srcdir)/electronpair24.png \
 	gcp_element_24			$(srcdir)/element24.png \
-	gcp_unpairedelec_24		$(srcdir)/unpairedelectron24.png
+	gcp_unpairedelec_24		$(srcdir)/unpairedelectron24.png \
+	gcp_orbit_24			$(srcdir)/orbit24.png
 
 atomsdir = $(libdir)/gchemutils/@GCU_API_VER@/plugins/paint
 atoms_LTLIBRARIES = atoms.la
@@ -40,13 +42,17 @@ atoms_la_SOURCES = \
 	plugin.cc \
 	chargetool.cc \
 	electrontool.cc \
-	elementtool.cc
+	elementtool.cc \
+	orbital.cc \
+	orbitaltool.cc
 
 noinst_HEADERS = \
 	plugin.h \
 	chargetool.h \
 	electrontool.h \
-	elementtool.h
+	elementtool.h \
+	orbital.h \
+	orbitaltool.h
 
 
 $(BUILT_SOURCES): $(IMAGES)
